Added Algoexpert Questions

--- a/AlgoexpertProblems/AlgoexpertProblems/AlgoexpertProblems.csproj
+++ b/AlgoexpertProblems/AlgoexpertProblems/AlgoexpertProblems.csproj
@@ -48,6 +48,90 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="questions\Airport_Connections.md" />
+    <None Include="questions\Apartment_Hunting.md" />
+    <None Include="questions\Balanced_Bracket.md" />
+    <None Include="questions\Binary_Search.md" />
+    <None Include="questions\Boggle_Board.md" />
+    <None Include="questions\Breadth-first_Search.md" />
+    <None Include="questions\BST_Construction.md" />
+    <None Include="questions\BST_Construction_Iterative.md" />
+    <None Include="questions\BST_Traversal.md" />
+    <None Include="questions\Bubble_Sort.md" />
+    <None Include="questions\Caesar_Cipher_Encryptor.md" />
+    <None Include="questions\Calendar_Matching.md" />
+    <None Include="questions\Continuous_Median.md" />
+    <None Include="questions\Depth-first_Search.md" />
+    <None Include="questions\Disk_Stacking.md" />
+    <None Include="questions\Find_Closest_Value_In_BST.md" />
+    <None Include="questions\Find_Loop.md" />
+    <None Include="questions\Find_Three_Largest_Numbers.md" />
+    <None Include="questions\Four_Number_Sum.md" />
+    <None Include="questions\Heap_Sort.md" />
+    <None Include="questions\Insertion_Sort.md" />
+    <None Include="questions\Invert_Binary_Tree.md" />
+    <None Include="questions\Iterative_In-order_Traversal.md" />
+    <None Include="questions\Kadane%27s_Algorithm.md" />
+    <None Include="questions\Knapsack_Problem.md" />
+    <None Include="questions\Knuth—Morris—Pratt_Algorithm.md" />
+    <None Include="questions\Largest_Range.md" />
+    <None Include="questions\Levenshtein_Distance.md" />
+    <None Include="questions\Linked_List_Construction.md" />
+    <None Include="questions\Longest_Common_Subsequence.md" />
+    <None Include="questions\Longest_Increasing_Subsequence.md" />
+    <None Include="questions\Longest_Palindromic_Substring.md" />
+    <None Include="questions\Longest_Substring_Without_Duplication.md" />
+    <None Include="questions\Lowest_Common_Manager.md" />
+    <None Include="questions\LRU_Cache.md" />
+    <None Include="questions\Maximum_Subset_Sum_With_No_Adjacent_Element.md" />
+    <None Include="questions\Max_Path_Sum_In_Binary_Tree.md" />
+    <None Include="questions\Max_Profit_With_K_Transactions.md" />
+    <None Include="questions\Max_Subset_Sum_No_Adjacent.md" />
+    <None Include="questions\Max_Sum_Increasing_Subsequence.md" />
+    <None Include="questions\Merge_Sort.md" />
+    <None Include="questions\Min_Heap_Construction.md" />
+    <None Include="questions\Min_Max_Stack_Construction.md" />
+    <None Include="questions\Min_Number_Of_Coins_For_Change.md" />
+    <None Include="questions\Min_Number_Of_Jumps.md" />
+    <None Include="questions\Min_Rewards.md" />
+    <None Include="questions\Multi_String_Search.md" />
+    <None Include="questions\Nth_Fibonacci.md" />
+    <None Include="questions\Numbers_In_Pi.md" />
+    <None Include="questions\Number_Of_Binary_Tree_Topologies.md" />
+    <None Include="questions\Number_Of_Ways_To_Make_Change.md" />
+    <None Include="questions\Palindrome_Check.md" />
+    <None Include="questions\Palindrome_Partitioning_Min_Cuts.md" />
+    <None Include="questions\Pattern_Matcher.md" />
+    <None Include="questions\Permutations.md" />
+    <None Include="questions\Powerset.md" />
+    <None Include="questions\Product_Sum.md" />
+    <None Include="questions\Quick_Select.md" />
+    <None Include="questions\Quick_Sort.md" />
+    <None Include="questions\Remove_Kth_Node_From_End.md" />
+    <None Include="questions\Reverse_Linked_List.md" />
+    <None Include="questions\River_Sizes.md" />
+    <None Include="questions\Search_For_Range.md" />
+    <None Include="questions\Search_In_Sorted_Matrix.md" />
+    <None Include="questions\Selection_Sort.md" />
+    <None Include="questions\Shifted_Binary_Search.md" />
+    <None Include="questions\Single_Cycle_Check.md" />
+    <None Include="questions\Smallest_Difference.md" />
+    <None Include="questions\Subarray_Sort.md" />
+    <None Include="questions\Suffix_Trie_Construction.md" />
+    <None Include="questions\Three_Number_Sum.md" />
+    <None Include="questions\Topological_Sort.md" />
+    <None Include="questions\Two_Number_Sum.md" />
+    <None Include="questions\Underscorify_Substring.md" />
+    <None Include="questions\Validate_BST.md" />
+    <None Include="questions\Water_Area.md" />
+    <None Include="questions\Youngest_Common_Ancestor.md" />
+    <None Include="questions\Zigzag_Traverse.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="questions\Easy\" />
+    <Folder Include="questions\Hard\" />
+    <Folder Include="questions\Medium\" />
+    <Folder Include="questions\VeryHard\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
